--- a/src/others/manifest.json
+++ b/src/others/manifest.json
@@ -3,14 +3,22 @@
     "name": "Calculator | SKR",
     "icons": [
         {
+            "src": "./images/icon-144.png",
+            "type": "image/png",
+            "sizes": "144x144",
+            "purpose": "any"
+        },
+        {
             "src": "./images/icon-192.png",
             "type": "image/png",
-            "sizes": "192x192"
+            "sizes": "192x192",
+            "purpose": "maskable"
         },
         {
             "src": "./images/icon-512.png",
             "type": "image/png",
-            "sizes": "512x512"
+            "sizes": "512x512",
+            "purpose": "maskable"
         }
     ],
     "start_url": "./index.html",
