--- a/src/others/manifest.json
+++ b/src/others/manifest.json
@@ -1,19 +1,28 @@
 {
     "short_name": "Calculator",
-    "name": "SKR Calculator",
+    "name": "Calculator | SKR",
     "icons": [
         {
-            "src": "./images/icon-192x192.png",
+            "src": "./images/icon-144.png",
             "type": "image/png",
-            "sizes": "192x192"
+            "sizes": "144x144",
+            "purpose": "any"
         },
         {
-            "src": "./images/icon-512x512.png",
+            "src": "./images/icon-192.png",
             "type": "image/png",
-            "sizes": "512x512"
+            "sizes": "192x192",
+            "purpose": "maskable"
+        },
+        {
+            "src": "./images/icon-512.png",
+            "type": "image/png",
+            "sizes": "512x512",
+            "purpose": "maskable"
         }
     ],
     "start_url": "./index.html",
+    "id": "./index.html",
     "background_color": "#a4a4a4",
     "orientation": "portrait",
     "display": "standalone",
